recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:7: error: not found: value level
    crab(level-1,legth/(Math.sqrt(2)))
         ^Crab:7: error: not found: value legth
    crab(level-1,legth/(Math.sqrt(2)))
                 ^Crab:9: error: not found: value level
    crab(level-1,legth/(Math.sqrt(2)))
         ^Crab:9: error: not found: value legth
    crab(level-1,legth/(Math.sqrt(2)))
                 ^