recursion.logo.lessons.recursion.logo.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
  if(levels==0){
    avance(length)
  }else{
    var angle=45;
    gauche(angle)
    crab(level-1,legth/(Math.sqrt(2)))
    droite(2*angle)
    crab(level-1,legth/(Math.sqrt(2)))
  }
}